# rodeobot

./: CMakeLists.txt  package.xml
configuration_files/: w3_cartographer.lua
include/rodeobot/: w3.h  wander.h  wanderbot.h
launch/: base_local_planner_params.yaml  control-basic.launch  control-basic.rviz  control-camera-test.launch  control-pcl-test.launch  control-w3-cartographer.launch  control-wanderbot.launch  costmap_common_params_laser.yaml  costmap_common_params_pc.yaml  global_costmap_params.yaml  local_costmap_params.yaml  ns_test.launch  robot-amcl.launch  robot-basic.launch  robot-camera.xml  robot-core.xml  robot-costmap.launch  robot-gmapping.launch  robot-many-laser.launch  robot-nav.launch  robot-no-camera.launch  robot-simple-nav.launch  robot-w3.launch  robot-wander.launch  sim-w3.launch  sim-wanderbot.launch  slam.launch
src/: battery_monitor.cpp  battery_monitor.py  ns_test.cpp  simple_drive.cpp  w3.cpp  w3_node.cpp  wander.cpp  wander_node.cpp  wanderbot.cpp  wanderbot_node.cpp
test/: wander_test.cpp
