<?xml version="1.0"?>
<package>
  <name>rodeobot</name>
  <version>0.0.1</version>
  <description>iRobot Create2-based robot w/ Intel RealSense camera</description>
  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ca_driver</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ca_driver</run_depend>

</package>
