<?xml version="1.0"?>
<package format="2">
  <name>rodeobot</name>
  <version>0.0.1</version>
  <description>iRobot Create2-based robot w/ Intel RealSense camera</description>
  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>ca_driver</depend>
  <depend>ca_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

</package>
